[package]
name = "rs-brain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
default = ["cuda"]
cuda = ["cudarc", "rustacuda"]

[dependencies]
# CPU Blas
cblas = "0.4.0"
cblas-sys = "0.1.4"
blas-src = { version = "0.10.0", features = ["blis"] }

# CUDA Blas
cudarc = { version = "0.10.0", optional = true }
rustacuda = { version = "0.1.3", optional = true }

rand = "0.8"

[dev-dependencies]
more-asserts = "0.3.1"

