[package]
name = "novigrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
default = ["cuda"]
cuda = ["cudarc"]
verbose_streams = []

[dependencies]
# CPU Blas
cblas = "0.4.0"
cblas-sys = "0.1.4"
blas-src = { version = "0.10.0", features = ["blis"] }

# CUDA Blas
cudarc = { version = "0.11.5", optional = true, features = ["cuda-12000"] }

rand = "0.8.5"
rand_distr = "0.4.3"
more-asserts = "0.3.1"
test-case = "3.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
